# ruffles-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/mesh-plane-intersection/src/: MeshPlaneIntersect.hpp
source/common/: cgal_util.h  clone_helper.h  common.cpp  common.h  imgui.cpp  imgui.h
source/editor/: menu.cpp  menu.h  serializer.cpp  serializer.h  view.cpp  view.h  view_model.cpp  view_model.h
source/editor/elements/: abstract_element.h  mesh_renderer.cpp  mesh_renderer.h
source/editor/style/: colors.cpp  colors.h  editor_style.h
source/editor/tools/: abstract_tool.h  change_lengths.cpp  change_lengths.h  connection_point_editor.cpp  connection_point_editor.h  force_positioning.cpp  force_positioning.h  intersector_adapter.cpp  intersector_adapter.h  mesh_loader.cpp  mesh_loader.h  multi_ruffle_tab_placement.cpp  multi_ruffle_tab_placement.h  plane_positioning.cpp  plane_positioning.h  ruffle_densifier.cpp  ruffle_densifier.h  ruffle_optimizer.cpp  ruffle_optimizer.h  segmenter.cpp  segmenter.h  tool_selector.cpp  tool_selector.h
source/editor/utils/: concatenate_meshes.cpp  concatenate_meshes.h  filesystem_io.cpp  filesystem_io.h  list.cpp  list.h  logger.h  ruffle_view.cpp  ruffle_view.h  transform.cpp  transform.h  view_utils.cpp  view_utils.h
source/model/: data_model.cpp  data_model.h  mesh_model.cpp  mesh_model.h  model_part.cpp  model_part.h  plane.cpp  plane.h
source/optimization/: heuristic.cpp  heuristic.h  particle_swarm.cpp  particle_swarm.h  target_shape.cpp  target_shape.h
source/output/: create_svg.cpp  create_svg.h
source/ruffle/: ruffle.cpp  ruffle.h
source/simulation/: air_mesh.cpp  air_mesh.h  combination.cpp  combination.h  lbfgs.cpp  lbfgs.h  line_search.cpp  line_search.h  simulation_mesh.cpp  simulation_mesh.h  simulator.h  verlet.cpp  verlet.h
source/visualization/: visualization.cpp  visualization.h
